Share buttons for contact page.

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,3 +1,23 @@
 <p>Podés contactarnos enviando un mail a <a href="mailto:consultas@pastelesdelaosa.com.ar">consultas@pastelesdelaosa.com.ar</a>, consultarnos sobre otras tortas y tartas dulces, y sobre diferentes tamaños y presentaciones.</p>
 
 <p>No dudes en escribirnos ante cualquier duda sobre las opciones que te presentamos.</p>
+
+<hr>
+
+<div class="row-fluid">
+	<div class="span2">
+		<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.pastelesdelaosa.com.ar%2F&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
+  	</div>
+  	<div class="span2">
+		<g:plus action="share" annotation="bubble" href="http://www.pastelesdelaosa.com.ar"></g:plus>
+
+		<script type="text/javascript">
+		 	window.___gcfg = {lang: 'es'};
+			(function() {
+				var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+				po.src = 'https://apis.google.com/js/plusone.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+			})();
+		</script>
+	</div>
+</div>
