--- a/partials/cake_list.html
+++ b/partials/cake_list.html
@@ -4,7 +4,7 @@
 
 <table class="table table-condensed">
     <tr ng-repeat="cake in cake_list | filter:query">
-    	<td width="100px"><a href="#/tortas/{{cake.id}}"><img ng-src="{{cake.thumbnail}}" alt="{{cake.name}}"></a></td>
+    	<td width="100px"><a href="#/tortas/{{cake.id}}"><img class="img-rounded" ng-src="{{cake.thumbnail}}" alt="{{cake.name}}"></a></td>
         <td width="150px" style="text-align : center; font-weight:bold;"><a href="#/tortas/{{cake.id}}">{{cake.name}}</a></td>
         <td><i>{{cake.description}}</i></td>
         <td width="50px" style="color : Green">$ {{cake.price}}<span class="decimal">00</span></td>
