--- a/partials/home.html
+++ b/partials/home.html
@@ -1,13 +1,13 @@
 <div id="carousel" class="carousel">
   <div class="carousel-inner">
     <div class="active item">
-      <img src="img/8.jpg">
+      <img class="img-rounded" src="img/8.jpg">
     </div>
     <div class="item">
-      <img src="img/3.jpg">
+      <img class="img-rounded" src="img/3.jpg">
     </div>
     <div class="item">
-      <img src="img/5.jpg">
+      <img class="img-rounded" src="img/5.jpg">
     </div>
   </div>
 </div>
