--- a/partials/contact.html
+++ b/partials/contact.html
@@ -4,6 +4,10 @@
 
 <hr>
 
+<iframe style="overflow:hidden;" src="https://docs.google.com/spreadsheet/embeddedform?hl=es&amp;formkey=dG8yNmFOeHVxakwxam84SDUwR0hkTmc6MQ" width="760" height="470" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+<hr>
+
 <div class="row-fluid">
 	<div class="span2">
 		<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.pastelesdelaosa.com.ar%2F&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
