Fix scrollbar for IE.

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -4,7 +4,7 @@
 
 <hr>
 
-<iframe style="overflow:hidden;" src="https://docs.google.com/spreadsheet/embeddedform?hl=es&amp;formkey=dG8yNmFOeHVxakwxam84SDUwR0hkTmc6MQ" width="760" height="470" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe style="overflow:hidden;" src="https://docs.google.com/spreadsheet/embeddedform?hl=es&amp;formkey=dG8yNmFOeHVxakwxam84SDUwR0hkTmc6MQ" width="760" height="470" frameBorder="0" scrolling="no" marginheight="0" marginwidth="0">Loading...</iframe>
 
 <hr>
 
