--- a/partials/cake_list.html
+++ b/partials/cake_list.html
@@ -7,12 +7,10 @@
 
 <br/><br/>
 
-<div ng-show="show_gallery" class="row-fluid gallery-row" ng-repeat="row in cake_list | filter:query | grouped:3">
-	<div class="span4" ng-repeat="cake in row">
-		<a title="cake.name" description="cake.description" href="#/tortas/{{cake.id}}" popover>
-            <img class="img-rounded img-border" ng-src="{{cake.thumbnail}}" alt="{{cake.name}}">
-        </a>
-	</div>
+<div ng-show="show_gallery" ng-repeat="cake in cake_list | filter:query">
+    <a style="position:relative; float: left; margin: 5px;" title="cake.name" description="cake.description" href="#/tortas/{{cake.id}}" popover>
+        <img title="cake.name" description="cake.description" class="img-rounded img-border" width="290px" ng-src="{{cake.thumbnail}}" alt="{{cake.name}}">
+    </a>
 </div>
 
 <table ng-hide="show_gallery" class="table table-condensed">
