--- a/partials/home.html
+++ b/partials/home.html
@@ -1,4 +1,4 @@
-<div id="carousel" class="carousel">
+<div id="carousel_home" class="carousel">
   <div class="carousel-inner">
     <div class="active item">
       <img class="img-rounded" src="img/8.jpg">
@@ -38,7 +38,7 @@
 
 <script>
   $(function() {
-    $('#carousel').carousel({
+    $('#carousel_home').carousel({
       interval: 4000,
       pause: ""
     });
