--- a/partials/home.html
+++ b/partials/home.html
@@ -21,18 +21,19 @@
 <div class="row-fluid marketing">
   <div class="span6">
     <h4>Delicias tradicionales</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+    <p>Te traemos los clásicos de siempre, las recetas de la abuela, que conservan los sabores y presentaciones originales de la pastelería y repostería.</p>
 
     <h4>Delicias bajas en carbohidratos</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+    <p>Con recetas especialmente diseñadas y probadas, te acercamos versiones de tortas, tartas y demás productos con bajo contenido de azúcar. Ideal para que quienes deben cuidarse en la ingesta de carbohidratos, no se queden sin comer algo rico.</p>
   </div>
 
   <div class="span6">
     <h4>Delicias sin gluten</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    <p>Realizadas con productos certificados de no contener gluten, estas propuestas amplían las opciones para comer algo dulce, con sabores y texturas igual de exquisitos.</p>
 
     <h4>Delicias en miniatura</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+    <p>Para regalar, servir de forma más cómoda, y sorprender con presentaciones delicadas, las mini tortas y tartas que te presentamos son la solución perfecta!</p>
+    <p>Podrás adquirir en este tipo de presentación cualquiera de las delicias que te ofrecemos.</p>
   </div>
 </div>
 
