--- a/partials/cake_detail.html
+++ b/partials/cake_detail.html
@@ -1,31 +1,43 @@
 <div class="row-fluid">
-	<div class="span7">
+	<div class="span8">
 		<div id="carousel_detail" class="carousel">
 			<div class="carousel-inner">
 				<div ng-class="{active : $first, item : true}" ng-repeat="image in cake.images">
-			    	<img class="img-rounded" src="{{image}}" alt="{{cake.name}}" width="500px" />
+			    	<img class="img-rounded" src="{{image}}" alt="{{cake.name}}" width="600px" />
 			    </div>
 			</div>
 		</div>
+
+		<span class="decimal">Las fotos son de carácter ilustrativo</span>
 	</div>
 
-	<div class="span5">
+	<div id="cake-detail" class="span4">
 
 		<h2 style="text-align:center;"><i>{{cake.name}}</i></h2>
 
 		<br/>
-		<p><b>Descripción:</b><i> {{cake.description}}</i></p>
-		<br/>
+		<p><b>Descripción:</b> {{cake.description}}</p>
+
 		<p><b>Precio:</b><span style="color : Green"> $ {{cake.price}}<span class="decimal">00</span></span></p>
-		<br/>
+
 		<p ng-show="cake.size"><b>Tama&ntilde;o:</b> {{cake.size}}</p>
+
+		<p class="cake-info" ng-show="cake.low_on_sugar && cake.gluten_free">
+			También disponible sin gluten o con bajo contenido de azúcar.
+		</p>
+		<p class="cake-info" ng-show="!(cake.low_on_sugar && cake.gluten_free) && cake.low_on_sugar">
+			También disponible con bajo contenido de azúcar.
+		</p>
+		<p class="cake-info" ng-show="!(cake.low_on_sugar && cake.gluten_free) && cake.gluten_free">
+			También disponible sin gluten.
+		</p>
 	</div>
 </div>
 
 <script>
   $(function() {
     $('#carousel_detail').carousel({
-      interval: 4000,
+      interval: 3000,
       pause: ""
     });
   });
