--- a/partials/cake_detail.html
+++ b/partials/cake_detail.html
@@ -3,7 +3,7 @@
 		<div id="carousel_detail" class="carousel">
 			<div class="carousel-inner">
 				<div ng-class="{active : $first, item : true}" ng-repeat="image in cake.images">
-			    	<img class="img-rounded" src="{{image}}" alt="{{cake.name}}" width="600px" />
+			    	<img class="img-rounded" ng-src="{{image}}" alt="{{cake.name}}" width="600px" />
 			    </div>
 			</div>
 		</div>
