--- a/partials/home.html
+++ b/partials/home.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="jumbotron">
-  <p class="lead">Todos los productos que te ofrecemos están realizados en forma casera, y sin aditivos industriales, logrando así los sabores más intensos y definidos, y siendo la forma más sana de comer algo dulce.</p>
+  <p class="lead">Todos los productos que te ofrecemos están realizados en forma casera y sin aditivos industriales, logrando así los sabores más intensos y definidos, y siendo la forma más sana de comer algo dulce.</p>
 </div>
 
 <hr>
@@ -21,7 +21,7 @@
 <div class="row-fluid marketing">
   <div class="span6">
     <h4>Delicias tradicionales</h4>
-    <p>Te traemos los clásicos de siempre, las recetas de la abuela, que conservan los sabores y presentaciones originales de la pastelería y repostería.</p>
+    <p>Te traemos los clásicos de siempre, las recetas de la abuela que conservan los sabores y presentaciones originales de la pastelería y repostería.</p>
 
     <h4>Delicias bajas en carbohidratos</h4>
     <p>Con recetas especialmente diseñadas y probadas, te acercamos versiones de tortas, tartas y demás productos con bajo contenido de azúcar. Ideal para que quienes deben cuidarse en la ingesta de carbohidratos, no se queden sin comer algo rico.</p>
