--- a/partials/home.html
+++ b/partials/home.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="jumbotron">
-  <p class="lead">Todos los productos que te ofrecemos están realizados en forma casera y sin aditivos industriales, logrando así los sabores más intensos y definidos, y siendo la forma más sana de comer algo dulce.</p>
+  <p class="lead">Todos nuestros productos están realizados en forma casera y sin aditivos industriales, logrando así sabores intensos y definidos. Esta es la forma más sana de comer algo dulce.</p>
 </div>
 
 <hr>
@@ -21,19 +21,15 @@
 <div class="row-fluid marketing">
   <div class="span6">
     <h4>Delicias tradicionales</h4>
-    <p>Te traemos los clásicos de siempre, las recetas de la abuela que conservan los sabores y presentaciones originales de la pastelería y repostería.</p>
+    <p>Los clásicos de siempre, recetas que conservan los sabores y presentaciones originales de la pastelería y repostería.</p>
 
     <h4>Delicias bajas en carbohidratos</h4>
-    <p>Con recetas especialmente diseñadas y probadas, te acercamos versiones de tortas, tartas y demás productos con bajo contenido de azúcar. Ideal para que quienes deben cuidarse en la ingesta de carbohidratos, no se queden sin comer algo rico.</p>
+    <p>Versiones de nuestros productos con bajo contenido de azucar.</p>
   </div>
 
   <div class="span6">
     <h4>Delicias sin gluten</h4>
-    <p>Realizadas con productos certificados de no contener gluten, estas propuestas amplían las opciones para comer algo dulce, con sabores y texturas igual de exquisitos.</p>
-
-    <h4>Delicias en miniatura</h4>
-    <p>Para regalar, servir de forma más cómoda, y sorprender con presentaciones delicadas, las mini tortas y tartas que te presentamos son la solución perfecta!</p>
-    <p>Podrás adquirir en este tipo de presentación cualquiera de las delicias que te ofrecemos.</p>
+    <p>Propuestas que amplían las opciones para comer algo dulce.</p>
   </div>
 </div>
 
