Adding new button to the menu.

--- a/partials/cake_list.html
+++ b/partials/cake_list.html
@@ -1,8 +1,11 @@
+
+<p class="cake_list_main_text" ng-show="mini_pasteleria">Estas opciones en tamaños pequeños permiten presentaciones más delicadas, comodidad al servir, y son también una alternativa original a la hora de hacer un regalo.</p>
+
 <input type="text" ng-model="query" placeholder="Buscar...">
 
 <div class="btn-group switch-gallery" data-toggle="buttons-radio" ng-init="show_gallery=true">
-    <button type="button" class="btn btn-primary active" ng-click="show_gallery=true">Galería</button>
-    <button type="button" class="btn btn-primary" ng-click="show_gallery=false">Listado</button>
+    <button type="button" class="btn btn-brown active" ng-click="show_gallery=true">Galería</button>
+    <button type="button" class="btn btn-brown" ng-click="show_gallery=false">Listado</button>
 </div>
 
 <br/><br/>
