--- a/css/app.css
+++ b/css/app.css
@@ -100,8 +100,34 @@ h1, h2 {
   box-shadow: 0 5px 20px #ddd inset, 0 3px 0 #999 inset;
 }
 
-@media only screen and (min-width : 1824px) {
-  #logo {
-    margin-left: 300px;
-  }
+.cake_list_main_text {
+  margin: 40px;
+  color: gray;
+  text-align: center;
+  font-weight: bold;
+}
+
+.nav-pills a {
+  color: Brown;
+}
+
+.nav-pills > .active > a, .nav-pills > .active > a:hover {
+  background-color: Brown;
+}
+
+.btn-brown {
+  background-color: hsl(6, 64%, 20%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9e2f22", endColorstr="#531812");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#9e2f22), to(#531812));
+  background-image: -moz-linear-gradient(top, #9e2f22, #531812);
+  background-image: -ms-linear-gradient(top, #9e2f22, #531812);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9e2f22), color-stop(100%, #531812));
+  background-image: -webkit-linear-gradient(top, #9e2f22, #531812);
+  background-image: -o-linear-gradient(top, #9e2f22, #531812);
+  background-image: linear-gradient(#9e2f22, #531812);
+  border-color: #531812 #531812 hsl(6, 64%, 15.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.29);
+  -webkit-font-smoothing: antialiased;
 }
