--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,7 @@
 <div id="carousel_home" class="carousel">
   <div class="carousel-inner">
     <div class="active item">
-      <img class="img-rounded" src="img/8.jpg">
+      <img class="img-rounded" src="img/mini_ricota_2.jpg">
     </div>
     <div class="item">
       <img class="img-rounded" src="img/3.jpg">
