--- a/css/app.css
+++ b/css/app.css
@@ -108,11 +108,11 @@ h1, h2 {
 }
 
 .nav-pills a {
-  color: Brown;
+  color: rgb(155, 65, 31);
 }
 
 .nav-pills > .active > a, .nav-pills > .active > a:hover {
-  background-color: Brown;
+  background-color: rgb(155, 65, 31);
 }
 
 .btn-brown {
